--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "supabase": "^1.172.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
